Fix motion timer tracking, improve macros input spacing
Motion Timer:
- State.py update() now tracks 'xx' state transitions
- Calls program_started() when entering RUNNING state
- Calls program_stopped() when leaving RUNNING state
- Fixes motion hours not being recorded

Macros Table Spacing:
- Hex input: normal height (28px), no font-size override
- col-color: width 100px, gap 0.35em between swatch and input
- col-name: margin-left 16px (was 10px)
- col-file: margin-left 16px, input has margin-right 8px
- Prevents folder icon overlap with filename input
- Consistent 16px gaps between color/name/file columns

--- a/src/stylus/view-macros.styl
+++ b/src/stylus/view-macros.styl
@@ -151,21 +151,20 @@
       margin-left 8px
 
     .col-color
-      width 90px
+      width 100px
       text-align center
       margin-left 16px
 
     .col-name
       width 130px
       text-align center
-      margin-left 10px
+      margin-left 16px
 
     .col-file
       flex 1
       text-align center
       min-width 0
-      margin-left 10px
-      margin-right 12px
+      margin-left 16px
 
     .col-actions
       width 52px
@@ -238,14 +237,23 @@
         background #fff
 
     .col-color
-      width 90px
+      width 100px
       margin-left 16px
       display flex
       align-items center
+      gap 0.35em
+
+      input[type="text"]
+        flex 1
+        min-width 0
+        height 28px
+        padding 0.3em 0.4em
+        border 1px solid #ccc
+        border-radius 3px
 
     .col-name
       width 130px
-      margin-left 10px
+      margin-left 16px
 
       input
         width 100%
@@ -257,11 +265,14 @@
     .col-file
       flex 1
       min-width 0
-      margin-left 10px
-      margin-right 12px
+      margin-left 16px
+      display flex
+      align-items center
 
       input
-        width 100%
+        flex 1
+        min-width 0
+        margin-right 8px
         border 1px solid #ddd
         border-radius 3px
         padding 0.3em 0.5em
